# paddleocr-vl-rs

./: .gitignore  Cargo.toml  README.md
crates/burn-mlx/: Cargo.toml
crates/burn-mlx/src/: backend.rs  device.rs  element.rs  lib.rs  tensor.rs
crates/burn-mlx/src/ops/: activation.rs  base.rs  bool_ops.rs  float_ops.rs  int_ops.rs  mod.rs  module.rs  module_ops.rs  numeric.rs  other_ops.rs
crates/burn-mlx/tests/: conv2d.rs  half_precision.rs
crates/paddleocr-vl/: Cargo.toml  README.md
crates/paddleocr-vl-pipeline/: Cargo.toml  README.md
crates/paddleocr-vl-pipeline/examples/: cli.rs
crates/paddleocr-vl-pipeline/src/: lib.rs
crates/paddleocr-vl/examples/: cli.rs
crates/paddleocr-vl/src/: lib.rs  load_adapter.rs
crates/paddleocr-vl/src/paddleocr_vl/: mod.rs  projector.rs
crates/paddleocr-vl/src/paddleocr_vl/text/: decoder.rs  mod.rs
crates/paddleocr-vl/src/paddleocr_vl/vision/: embeddings.rs  encoder.rs  mod.rs
crates/pp-doclayout/: Cargo.toml  README.md
crates/pp-doclayout/examples/: cli.rs
crates/pp-doclayout/src/: api.rs  decoder.rs  encoder.rs  frozen_batch_norm.rs  lib.rs  load_adapter.rs  postprocessing.rs  preprocessing.rs  v3.rs
crates/pp-doclayout/src/backbone/: embeddings.rs  mod.rs  stage.rs
crates/pp-doclayout/src/reading_order/: embeddings.rs  encoder.rs  global_pointer.rs  mod.rs
crates/pp-doclayout/tests/: mlx_half_anchors.rs
scripts/: download_models.py
