[package]
name = "paddleocr-vl"
version = "0.1.0"
edition = "2024"

[features]
default = ["flex", "cpu"]
cpu = ["burn/cpu"]
cuda = ["burn/cuda"]
flex = ["burn/flex"]
tch = ["burn/tch"]
metal = ["burn/metal"]
vulkan = ["burn/vulkan"]
wgpu = ["burn/wgpu"]
mlx = ["dep:burn-mlx"]

[dependencies]
burn = { workspace = true }
burn-store = { workspace = true }
half = "2"
image = "0.25.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.22.2"
burn-mlx = { workspace = true, optional = true }
regex = "1.12.3"

[dev-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
